atualização de paragrafos

--- a/index.html
+++ b/index.html
@@ -28,12 +28,49 @@
         conteudo 
     </div>
 
+    <div class="conteudo">
+        <h3>Parallax</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime aperiam aliquam, <br>
+             odit obcaecati veniam quo fugit molestias praesentium magnam recusandae facere, maiores rem dolorem ipsa cumque voluptatibus ab excepturi mollitia.</p>
+             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut tempore enim atque animi deleniti quod voluptas earum recusandae aspernatur excepturi, optio error. Consequatur provident possimus asperiores vel doloribus? Fugit, ab? Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic quas rem at itaque totam? Commodi dolores aut aliquam labore nulla molestiae tempora magnam nobis! Veniam eaque repellendus officia corporis ex. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quasi cumque aspernatur voluptas, suscipit quae quisquam quos odit laborum obcaecati ratione molestias mollitia harum, quaerat tenetur vel reprehenderit voluptate eius iste.</p>
+    </div>
+
     <div class="caixa3">
         conteudo 3
     </div>
 
+    <div class="conteudo">
+        <h3>Parallax</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime aperiam aliquam, <br>
+             odit obcaecati veniam quo fugit molestias praesentium magnam recusandae facere, maiores rem dolorem ipsa cumque voluptatibus ab excepturi mollitia.</p>
+             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut tempore enim atque animi deleniti quod voluptas earum recusandae aspernatur excepturi, optio error. Consequatur provident possimus asperiores vel doloribus? Fugit, ab? Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic quas rem at itaque totam? Commodi dolores aut aliquam labore nulla molestiae tempora magnam nobis! Veniam eaque repellendus officia corporis ex. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quasi cumque aspernatur voluptas, suscipit quae quisquam quos odit laborum obcaecati ratione molestias mollitia harum, quaerat tenetur vel reprehenderit voluptate eius iste.</p>
+    </div>
+
     <div class="caixa4">
         conteudo 4
+    </div>
+
+    <div class="conteudo">
+        <h3>Parallax</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime aperiam aliquam, <br>
+             odit obcaecati veniam quo fugit molestias praesentium magnam recusandae facere, maiores rem dolorem ipsa cumque voluptatibus ab excepturi mollitia.</p>
+             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut tempore enim atque animi deleniti quod voluptas earum recusandae aspernatur excepturi, optio error. Consequatur provident possimus asperiores vel doloribus? Fugit, ab? Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic quas rem at itaque totam? Commodi dolores aut aliquam labore nulla molestiae tempora magnam nobis! Veniam eaque repellendus officia corporis ex. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quasi cumque aspernatur voluptas, suscipit quae quisquam quos odit laborum obcaecati ratione molestias mollitia harum, quaerat tenetur vel reprehenderit voluptate eius iste.</p>
+    </div>
+
+    <div class="caixa5">
+        conteudo 5
+    </div>
+
+    <div class="conteudo">
+        <h3>Parallax</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime aperiam aliquam, <br>
+             odit obcaecati veniam quo fugit molestias praesentium magnam recusandae facere, maiores rem dolorem ipsa cumque voluptatibus ab excepturi mollitia.</p>
+             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut tempore enim atque animi deleniti quod voluptas earum recusandae aspernatur excepturi, optio error. Consequatur provident possimus asperiores vel doloribus? Fugit, ab? Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic quas rem at itaque totam? Commodi dolores aut aliquam labore nulla molestiae tempora magnam nobis! Veniam eaque repellendus officia corporis ex. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quasi cumque aspernatur voluptas, suscipit quae quisquam quos odit laborum obcaecati ratione molestias mollitia harum, quaerat tenetur vel reprehenderit voluptate eius iste.</p>
+    </div>
+
+
+    <div class="caixa6">
+        conteudo 6
     </div>
 
 
